Statistik-Dashboard entfernt, db aufgeräumt
